la 2 empujacion a heruko

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
      <h1>Acceso denegado</h1>
-     <h2>como alternativa de este archivo , puede encajar build de angular o react o  index de web server mvc ... </h2>
+     <h2>como alternativa de este archivo , puede encajar build de angular o react o  index de web server mvc ... test </h2>
 </body>
 </html>
